# CS302_Final_Project

./: Progress_report_#1.txt  README.md  asset-manifest.json  final_report  index.html  milestones-et.txt  milestones-ih.txt  milestones_initials.txt
back/server/: CMakeLists.txt  README.md  client.html  index.html
back/server/src/: database.cpp  database.h  main.cpp  server.cpp  server.h
back/server/template/: CMakeLists.txt
back/server/template/src/client/: client.html
back/server/template/src/server/: main.cpp  postgres.cpp
front/chat-app/: README.md  package-lock.json  package.json
front/chat-app/src/: App.js  index.css  index.js
front/chat-app/src/components/: ChatRoom.jsx  Login.jsx  MessageInput.jsx  MessageList.jsx  Navbar.jsx  Rooms.jsx  UserAvatar.jsx
static/css/: main.b3efe10a.css  main.b3efe10a.css.map
static/js/: main.1aad53a4.js  main.1aad53a4.js.map
